--- a/profileApp/src/profile.css
+++ b/profileApp/src/profile.css
@@ -1,6 +1,6 @@
 .profile-div {
   max-width: 350px;
-  margin: 0 auto;
+  margin: 2rem auto;
   border: 3px solid #f1f1f1;
   text-align: center;
   padding: 2.5rem 0;
