--- a/profileApp/src/profile.css
+++ b/profileApp/src/profile.css
@@ -21,9 +21,23 @@ body {
 
 .userName {
   font-size: larger;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: bold;
+  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif;
+  font-weight: bolder;
   color: cornflowerblue;
+}
+
+.dashboard-area {
+  font-weight: bolder;
+}
+
+.welcome-user {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  color: rgb(0, 132, 255);
+}
+
+.dashboard-link {
+  text-align: center;
 }
 
 .logout-btn {
