add: firebase auth

--- a/loginApp/src/App.css
+++ b/loginApp/src/App.css
@@ -20,13 +20,19 @@ form {
 
 /* Full-width inputs */
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+
+.loader {
+  text-align: center;
+  margin-top: 3rem;
 }
 
 /* Set a style for all buttons */
