--- a/profileApp/src/profile.css
+++ b/profileApp/src/profile.css
@@ -33,11 +33,15 @@ body {
 
 .welcome-user {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: larger;
-  color: rgb(0, 132, 255);
+  font-size: large;
+  color: rgb(4, 205, 255);
 }
 
 .dashboard-link {
+  text-align: center;
+}
+
+.dashboard-container {
   text-align: center;
 }
 
@@ -55,6 +59,22 @@ body {
   display: flex;
   list-style-type: none;
   gap: 1rem;
+}
+
+.dashboard-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.dashboard-cards > div {
+  -webkit-box-shadow: -19px 17px 19px -3px rgba(235, 255, 244, 0.49);
+  box-shadow: -19px 17px 19px -3px rgba(244, 253, 248, 0.49);
+  border: groove white;
+  background-color: aliceblue;
+  border-radius: 10px;
+  padding: 2rem 0;
+  cursor: pointer;
 }
 
 /* Add a hover effect for buttons */
